fix subtle mis-alignement of titles in timeline in Firefox

--- a/src/components/Work/index.css
+++ b/src/components/Work/index.css
@@ -4,7 +4,7 @@
 
 .title {
   display: inline-block;
-  margin: 0 0 0 -1rem;
+  margin: 0 0 0 -16px; /* HACK fix subtle mis-alignment in FF when using 1rem */
   padding: .5rem 1rem .5rem 2rem;
   background-color: rgba(255, 255, 255, .5);
   font-family: var(--fontHeading);
